<resources>
    <string name="app_name">My hsn</string>
    <string name="cheese">strings</string>
    <string name="checkbox">CheckBox</string>
    <string name="new_names">new_names</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="file">File</string>
    <string name="fil_1">صفحه 1</string>
    <string name="fil_2">صفحه 2</string>
    <string name="fil_3">صفحه 3</string>
    <string name="fil_4">صفحه 4</string>
    <string name="fil_5">صفحه 5</string>
    <string name="fil_6">صفحه 6</string>
    <string name="cut">برش</string>
    <string name="Copy">کپی</string>
    <string name="Paste">چسباندن</string>
    <string name="Delete">حذف</string>
    <string name="Mow">حرکت</string>
    <string name="calculator">ماشین حساب</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="جمع">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="منها">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="درصد">%</string>
    <string name="تقسیم">/</string>
    <string name="ac">AC</string>
    <string name="x">X</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="مساوی">=</string>
    <string name="_0">0</string>
</resources>